--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/MyStyle"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="ru.alexey.weather.MainActivity">
+        <activity android:name=".MainActivity"
+                    android:label="@string/app_name"
+                    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
